--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,8 @@
 }
 
 .home,
-.services,
-.products,
-.sign-up {
+.contact,
+.places {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -16,16 +15,7 @@
   font-size: 3rem;
 }
 
-.services {
-  background-image: url("./images/img-2.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.products {
+.contact {
   background-image: url("./images/img-1.jpg");
   background-position: center;
   background-size: fill;
@@ -34,7 +24,7 @@
   font-size: 100px;
 }
 
-.sign-up {
+.places {
   background-image: url("./images/img-8.jpg");
   background-position: center;
   background-size: cover;
